<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewReminder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:color/white"
            android:backgroundTint="#0d7acc">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:stateListAnimator="@null"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/rimbo_schrift" />

            <ImageView
                android:id="@+id/placemaker"
                android:layout_width="50dp"
                android:layout_height="50dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border_bottom">

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@null"
                        android:hint="Name"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border_bottom"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">


                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Remind Me on a Date"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switchDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border_bottom"
                    android:hint="Select Date"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:visibility="gone" />


                <LinearLayout
                    android:id="@+id/layoutTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Remind Me on a Time"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switchTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border_bottom"
                    android:hint="Select Time"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layoutNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Notification Method"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutNotificationBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/border_bottom"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/btnNotification"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="110dp"
                        android:backgroundTint="@color/blue"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/notification_white" />

                    <ImageButton
                        android:id="@+id/btnAlarm"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/alarm" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border_bottom"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Add a Location"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switchLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutLocationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/txtLocationStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@null"
                        android:hint="Enter Street"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />

                    <EditText
                        android:id="@+id/txtLocationPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@null"
                        android:hint="Enter Location"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Add a Vehicle"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutVehicleBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/border_bottom"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/btnWalking"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:backgroundTint="@color/blue"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/walking_white" />

                    <ImageButton
                        android:id="@+id/btnBycicle"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/bycicle" />

                    <ImageButton
                        android:id="@+id/btnCar"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/car" />

                    <ImageButton
                        android:id="@+id/btnTrain"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/train" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Importance"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/border_bottom">

                    <ImageButton
                        android:id="@+id/btnNormal"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="60dp"
                        android:backgroundTint="@color/blue"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/exclamation1_white" />

                    <ImageButton
                        android:id="@+id/btnImportant"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/exclamation2" />

                    <ImageButton
                        android:id="@+id/btnVeryImportant"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/exclamation3" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#0d7acc"
                    android:text="CREATE"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>