<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navCalendar"
        android:icon="@drawable/today"
        android:title="Today" />
    <item
        android:id="@+id/navAddReminder"
        android:icon="@drawable/insert"
        android:title="New" />
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/settings"
        android:title="Settings"/>
</menu>