...
            android:layout_height="wrap_content"
            android:text="Change to Darkmode" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        android:layout_alignParentBottom="true"
        app:backgroundTint="#f1f2f4"
        app:itemIconTint="@drawable/bottom_navigation_selector"
...
